--- a/css/style_libros.css
+++ b/css/style_libros.css
@@ -1,5 +1,4 @@
 /*-----------------------------------------------------------------------------*/
-
 /*PÁGINA RESEÑAS*/
 .enlaces{
     width: 100%;
@@ -13,6 +12,10 @@
     gap: 20px; 
     margin-bottom: 10px;
     padding: 5px 10px;
+}
+.enlaces p{
+    text-align: center;
+    margin-bottom: 20px;
 }
 .libros{
     display: flex;
