--- a/css/style_resenas.css
+++ b/css/style_resenas.css
@@ -1,4 +1,3 @@
-
 /*-----------------------------------------------------------------------------*/
 /*PÁGINA RESEÑAS INDIVIDUALES*/
 .review{
@@ -19,6 +18,7 @@
     width: 100%;
     margin-top: 20px;
 }
+/*Reglas de la img de portada*/
 .portada {
     width: 300px;
     height: 450px;
@@ -26,36 +26,35 @@
     border-radius: 6px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
 }
+/*Reglas de información del libro*/
 .informacion{
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-.resena {
+/*Reglas de las reseñas individuales: retrato de quien ha hecho la reseña, puntuación y reseña*/
+.resena{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 40px;
     margin-top: 40px;
 }
-
-.resena div {
+.resena div{
     display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 250px;
     text-align: center;
 }
-
-.resena img {
+.resena img{
     width: 100px;
     height: 100px;
     object-fit: cover;
     border-radius: 50%;
     margin-bottom: 10px;
 }
-
-.puntuacion {
+.puntuacion{
     font-weight: bold;
     margin-bottom: 5px;
     color: #e28ec4;
