--- a/css/style_review.css
+++ b/css/style_review.css
@@ -44,8 +44,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 250px;
+    width: 50%;
     text-align: center;
+    padding-bottom: 50px;
 }
 .resena img{
     width: 100px;
