fixing media queries

--- a/css/style_review.css
+++ b/css/style_review.css
@@ -61,4 +61,24 @@
     color: #e28ec4;
 }
 
-
+@media screen and (min-width: 768px) and (max-width: 1024px){
+    .portada{
+        width: 220px;
+        height: 330px;
+    }
+}
+@media (max-width: 767px){
+    .libro {
+        flex-direction: column;
+        align-items: center;
+    }
+    .portada {
+        width: 180px;
+        height: 270px;
+        margin-bottom: 20px;
+    }
+    .informacion {
+        align-items: center;
+        text-align: center;
+    }
+}
