--- a/css/style_review.css
+++ b/css/style_review.css
@@ -66,7 +66,7 @@
         width: 220px;
         height: 330px;
     }
-    .l{
+    .resena div:last-child{
         padding-bottom: 90px;
     }
 }
