fixing commentaries and some errors

--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ footer p{
     animation: movimiento 20s linear infinite; /*animación para que el texto vaya hacia la izquiera de manera infinita*/
 }
 footer p span{
-    color: #f8a4d9;
+    color: #f8a4f8;
 }
 
 
